Updated CSS a bit

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -9,6 +9,24 @@
 	color: @gray-light;
 }*/
 
+p, a, h1, h2, h3, h4, h5, h6 {
+	font-family: 'News Cycle', sans-serif;
+	
+}
+
+p {
+	font-size: 120%;
+}
+
+a{
+	font-size: 120%;
+	color: #eb6864;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-size: 200%;
+}
+
 .gallery-image img{
     display: block;
     max-width: 100%;
@@ -25,6 +43,10 @@ body {
 	/*padding-top: 10px;*/
 	background-image: url('/images/crossword.png');
 	
+}
+
+#bio {
+	text-align: center;
 }
 
 #wrapper {
