--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -7,6 +7,7 @@
 		<title>Andrew Whipple</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.min.css" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
 		
 		{{!-- This file provides the default styling for the KeystoneJS Content Editor 
 			- only renders when user is logged in and admin--}}
@@ -37,7 +38,7 @@
 							<ul class="nav navbar-nav navbar-left">
 									{{# each navLinks}}
 									<li {{#ifeq ../section key}}class="active"{{else}}{{/ifeq}}>
-										<a href="{{ href }}">{{ label }}</a>
+										<a href="{{ href }}" class="navbarSection">{{ label }}</a>
 									</li>
 								{{/each}}
 							</ul>
