Updated favicon and fixed broken Soundcloud link on Music page

--- a/templates/views/music.hbs
+++ b/templates/views/music.hbs
@@ -27,7 +27,7 @@
 		</div>
 		
 			<div class="container">
-				<h4><em>You can also hear some of these songs, as well as a bunch of covers on my <a href="https://soundcloud.com/andrew-whipple">Soundcloud</a> and <a href="https://youtube.com/theandrewwhipple">Youtube</a> pages.</em></h4>
+				<h4><em>You can also hear some of these songs, as well as a bunch of covers on my <a href="https://soundcloud.com/andrewthewhip">Soundcloud</a> and <a href="https://youtube.com/theandrewwhipple">Youtube</a> pages.</em></h4>
 				
 				</div>
 		<br>
