Fixed the footer

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -90,9 +90,14 @@
 		
 	
 		<div class="container">
-			<div id="footer">
-			      {{> socialFooter}}
-			    </div>
+			
+			<div role="navigation" class="navbar navbar-default" id="footer">
+				<div class="container-fluid">
+				  {{> socialFooter}}
+			  	</div>
+			</div>
+			
+				
 		</div>
 	</div>
 		{{!--
