--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -58,15 +58,15 @@ body {
 	padding: 10px;
 }
 #body {
-	padding: 10px;
-	padding-bottom: 80px;
+	/*padding: 10px;*/
+	padding-bottom: 100px;
 }
 #footer {
-	width: 100%;
+	width: 93%;
 	height: 80px;
 	position: absolute;
 	bottom: 0;
-	left: 0;
+	/*left: 0;*/
 }
 
 
@@ -85,9 +85,9 @@ body {
 	
 }*/
 
-#footer {
+/*#footer {
 	background-color: #f8f8f8;
-}
+}*/
 .container .credit {
 	margin: 20px 0;
 }
@@ -95,9 +95,9 @@ body {
 	padding: 10px;
 }
 
-#copyright {
+/*#copyright {
 	padding-left: 10px;
-}
+}*/
 
 .podImgFrame {
 	padding: 10px;
