--- a/templates/views/podcast.hbs
+++ b/templates/views/podcast.hbs
@@ -12,7 +12,9 @@
 			<br>
 			<h4><a href="https://itunes.apple.com/us/podcast/profun!dity-podcast/id964000881?mt=2">Listen on iTunes!</a></h4>
 			<br>
-			<h4><a href="http://profunditypodcast.tumblr.com">Check it out on Tumblr!</a></h4>
+			<h4><a href="/blog/podcast">Check out episodes!</a></h4>
+			<br>
+			<h4><a href="http://feeds.feedburner.com/profunditypodcast">Snag the RSS Feed!</a></h4>
 		</div>
 	</div>
 </div>		
