Changed social footer to remove border and remove padding

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Andrew Whipple</title>
+		<meta name="description" content="Andrew Whipple is a student, writer, programmer, musician, and podcaster.">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
@@ -91,13 +92,13 @@
 	
 		<div class="container">
 			
-			<div role="navigation" class="navbar navbar-default" id="footer">
-				<div class="container-fluid">
+			<div  id="footer">
+				
 				  {{> socialFooter}}
-			  	</div>
+			  	
 			</div>
 			
-				
+				<!--role="navigation" class="navbar navbar-default"-->
 		</div>
 	</div>
 		{{!--
