--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -62,7 +62,7 @@ body {
 	padding-bottom: 100px;
 }
 #footer {
-	width: 93%;
+	
 	height: 80px;
 	position: absolute;
 	bottom: 0;
@@ -92,7 +92,8 @@ body {
 	margin: 20px 0;
 }
 #socialFoot {
-	padding: 10px;
+	/*padding: 10px;*/
+	padding-left: 0;
 }
 
 /*#copyright {
