--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -37,9 +37,11 @@
 		<div class="col-md-1"></div>
 		<div class="col-md-3">
 			<br>
-			<em><strong>This is my favorite twitter. It's not me. But I wish it was. Because punk rock.</strong></em>
-			<br><a class="twitter-timeline" href="https://twitter.com/everypunk" data-widget-id="524549653493063680">Tweets by @everypunk</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<em><strong>Yep. Carly Rae's twitter. <br>Why not?</strong></em>
+			<br><!--<a class="twitter-timeline" href="https://twitter.com/everypunk" data-widget-id="524549653493063680">Tweets by @everypunk</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>-->
+				<a class="twitter-timeline" href="https://twitter.com/carlyraejepsen" data-widget-id="575154754130612224">Tweets by @carlyraejepsen</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>	
 	</div>
 		
