Reformatted writing page to add screenplays (commented out reviews)

--- a/templates/views/writing.hbs
+++ b/templates/views/writing.hbs
@@ -23,9 +23,14 @@
 			</div>
 		
 			<div class="col-md-3">
-				<h4>Webseries</h4>
+				<h4>Screenplays</h4>
 				<ul>
-					<li><em><a href="https://www.youtube.com/user/stanfordsitcom">The Slump</a></em> (2014) A comedic weekly webseries about a group of college sophomores dealing with life and the wackiness therein. Worked on pitches and development of series, and co-wrote the upcoming episode "Week Six & The Sleuths" </li>
+					<li><a href="/writing/AStoryAboutYou.pdf">"A Story About You"</a> <em>A short screenplay adapation of the podcast "Welcome To Night Vale" for a class on adapation.</em>
+					</li>
+					<li><a href="/writing/WolfAtTheDoor.pdf">"Wolf At The Door"</a> <em>A short screenplay adapation of a Rebecca Curtis short story for the same class.</em>
+					</li>
+					<li><a href="/writing/BulletInTheBrain.pdf">"Bullet In The Brain"</a> <em>Yet another short screenplay adapation, this time of a Tobias Woolf short story.</em>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -41,7 +46,12 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h4>Reviews of Things</h4>
+				<h4>Webseries</h4>
+				<ul>
+					<li><em><a href="https://www.youtube.com/user/stanfordsitcom">The Slump</a></em> (2014) A comedic weekly webseries about a group of college sophomores dealing with life and the wackiness therein. Worked on pitches and development of series, and co-wrote the upcoming episode "Week Six & The Sleuths" </li>
+				</ul>
+				<!--<h4>Reviews of Things</h4>
+			
 				<ul>
 					<li><a href="http://andrewthewhip.tumblr.com/tagged/movie-a-day">Movie A Day</a></li>
 					<li><a href="http://polyphonicnoise.wordpress.com/2012/12/31/movies-i-still-need-to-see/">2012 Movies I Still Need To See</a></li>
@@ -62,7 +72,7 @@
 					<li><a href="http://polyphonicnoise.wordpress.com/2012/01/10/2011-best-of-movies/">2011 Best Of Movies</a> <a href="http://polyphonicnoise.wordpress.com/2012/01/12/2011-best-of-movies-part-2/">(Part 2)</a></li>
 					<li><a href="http://polyphonicnoise.wordpress.com/2012/01/10/2011-best-of-music/">2011 Best Of Music</a></li>
 					<li><a href="http://polyphonicnoise.wordpress.com/2010/03/06/sound-off/">Sound Off 2011</a></li>
-				</ul>
+				</ul>-->
 			</div>
 			
 			<div class="col-md-4">
