--- a/templates/views/writing.hbs
+++ b/templates/views/writing.hbs
@@ -22,14 +22,14 @@
 				
 			</div>
 		
-			<div class="col-md-3">
+			<div class="col-md-4">
 				<h4>Screenplays</h4>
 				<ul>
-					<li><a href="/writing/AStoryAboutYou.pdf">"A Story About You"</a> <em>A short screenplay adapation of the podcast "Welcome To Night Vale" for a class on adapation.</em>
+					<li><a href="/writing/AStoryAboutYou.pdf">"A Story About You"</a> A short screenplay adapation of the podcast "Welcome To Night Vale" for a class on adapation.
 					</li>
-					<li><a href="/writing/WolfAtTheDoor.pdf">"Wolf At The Door"</a> <em>A short screenplay adapation of a Rebecca Curtis short story for the same class.</em>
+					<li><a href="/writing/WolfAtTheDoor.pdf">"Wolf At The Door"</a> A short screenplay adapation of a Rebecca Curtis short story for the same class.
 					</li>
-					<li><a href="/writing/BulletInTheBrain.pdf">"Bullet In The Brain"</a> <em>Yet another short screenplay adapation, this time of a Tobias Woolf short story.</em>
+					<li><a href="/writing/BulletInTheBrain.pdf">"Bullet In The Brain"</a> Yet another short screenplay adapation, this time of a Tobias Woolf short story.
 					</li>
 				</ul>
 			</div>
