Updated tech resume

--- a/templates/views/technical.hbs
+++ b/templates/views/technical.hbs
@@ -7,7 +7,8 @@
 		<div class="col-md-8">
 			<h4>Experience</h4>
 			<ul>
-				<li><strong><em>Much Ado About Nothing (upcoming, 2015)</em> </strong>Director, Stanford Shakespeare Company</li>
+				<li><strong><em>Much Ado About Nothing (current, 2015)</em> </strong>Director, Stanford Shakespeare Company</li>
+				<li><strong><em>Lear (2015)</em></strong>Asst. Stage Manager/Asst. Sound Designer, Stanford Shakespeare Company (dir. Kevin Heller)</li>
 				<li><em><strong>The Winter's Tale (2014)</strong></em> Sound Designer/Asst. Stage Manager, Stanford Shakespeare Company (dir. Nora Tjossem)</li>
 				<li><em><strong>Henry V (2014)</strong></em> Sound Designer/Asst. Stage Manager, Stanford Shakespeare Company (dir. Louis McWilliams)</li>
 				<li><em><strong>Fall Showcase (2013)</strong></em> Monologue Director, Stanford Shakespeare Company</li>
